# stream-os

./: .gitignore  .gitmodules  Cargo.toml  README.md  boot.s  build.rs  build.sh  env.sh  fakelibc.c  grub.cfg  kernel.c  linker.ld  lint.sh  qemu_wrapper.sh  shell.nix  target.json
.cargo/: config.toml
include/: ctype.h  errno.h  math.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h
include/sys/: stat.h  types.h
res/: index.html
res/sample_program/: sample.c  vtable.h
src/: acpi.rs  allocator.rs  boot.s  cursor.rs  framebuffer.rs  future.rs  game.rs  gdt.rs  interrupts.rs  libc.rs  logger.rs  main.rs  mouse.rs  multiboot.rs  multiboot2.rs  multiprocessing.rs  net.rs  print.rs  process.rs  rng.rs  rtl8139.rs  sleep.rs  testing.rs  time.rs  uhci.rs  vga.rs
src/io/: io_allocator.rs  mod.rs  pci.rs  port_manager.rs  ps2.rs  rtc.rs  serial.rs  vga.rs
src/net/: mod.rs  tcp.rs
src/usb/: mod.rs  uhci.rs
src/util/: async_channel.rs  async_mutex.rs  atomic_cell.rs  bit_manipulation.rs  circular_array.rs  histogram.rs  interrupt_guard.rs  lock_free_queue.rs  mod.rs  oneshot.rs  spinlock.rs  updated_val.rs  waker_list.rs
