[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.3", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["alloc", "async-await"] }
hashbrown = "0.14.0"
paste = "1.0.14"

[profile.release]
debug = true
