[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.3", default-features = false }
hashbrown = "0.14.0"
paste = "1.0.14"

[profile.release]
debug = true
