[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.3", default-features = false }
hashbrown = "0.14.0"
paste = "1.0.14"
elf = { version = "0.7.4", default-features = false }

[build-dependencies]
bindgen = "0.69.1"

[profile.release]
debug = true
